# python-coursework

./: practice.py  pyproject.toml  pytest.ini  test.js  test.py
AsyncIO/: async_await-1.py  async_await.py  create_task.py  event.py  futures.py  gather.py  locks.py  semaphore.py  task_group.py
Basics/: a.py  decorator.py  demo.py  file.py  function.py  test.py  track.py
FastAPI/: pydantic_demo.py  pydantic_demo1.py
FastAPI/fast-api/: .env  alembic.ini  dependencies_demo.py  pyproject.toml
FastAPI/fast-api/app/api/: main.py
FastAPI/fast-api/app/api/routers/: __init__.py  resource1.py  resource2.py
FastAPI/fast-api/app/common/: db.py  settings.py
FastAPI/fast-api/app/migrations/: env.py
FastAPI/fast-api/app/migrations/versions/: 2025_04_08_1849-2c36803f0976_add_users_table.py  2025_04_08_1920-eb834f7f70c9_new_attr_column_added_in_resource2.py  2025_04_08_1947-1368eb70bae4_new_attr_column_deleted_from_resource2.py  2025_04_10_1435-5c4ca9ee6add_new_attr_column_added_in_resource2.py
FastAPI/fast-api/app/models/: __init__.py  base.py  resource1.py  resource2.py
FastAPI/fast-api/app/schemas/: resource1.py  resource2.py
Iterators/: access_specifiers.py  desc.txt  generator-1.py  iterator.py  iterators.py  range_iterator.py
Logging/: custom_logger.py  log-1.py
Multi Processing/: event_scheduler.py  lock.py  pipes.py  process.py  queues.py  synchronized_queue.py  value_array.py
Multi Threading/: race_condition.py  thread-1.py  thread-2.py
OOPS/: abstractclass.py  class_veriables.py  descriptor_protocol.py  dimond_problem.py  inheritance-2.py  (+5 more)
(+84 files in other folders)
