[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "psycopg[binary,pool]>=3.2.6",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[asyncio]>=2.0.40",
]
